[tool.poetry]
name = "podracer"
version = "0.1.0"
description = ""
authors = ["Tom Wood <tom.wood@civicactions.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
jsonschema = "^3.2.0"
click = "^7.0"
numpy = "^1.18.1"
fuzzywuzzy = "^0.17.0"
scikit-learn = "^0.22.1"
python-levenshtein = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = {version = "^20", allow-prereleases = true}
pre-commit = "^2"

[tool.poetry.scripts]
podracer = "podracer.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
